--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migration:generate": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate -d ./src/infrastructure/database/typeorm.config.ts ./src/infrastructure/database/migrations/migration",
     "migration:create": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:create -d ./src/infrastructure/database/typeorm.config.ts ./src/infrastructure/database/migrations/migration",
-    "migration:run": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d ./src/infrastructure/database/typeorm.config.ts",
-    "migration:revert": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:revert -d ./src/infrastructure/database/typeorm.config.ts",
-    "migration:seed": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./src/infrastructure/database/seed-database.ts"
+    "migration:run": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d ./dist/infrastructure/database/typeorm.config.js",
+    "migration:revert": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:revert -d ./dist/infrastructure/database/typeorm.config.js",
+    "migration:seed": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./dist/infrastructure/database/seed-database.js"
   },
   "dependencies": {
     "@faker-js/faker": "^9.6.0",
